// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders dark styling if provided 1`] = `
<nav
  className="c-chrome__nav c-chrome__nav--dark "
  data-garden-id="chrome.nav"
  data-garden-version="version"
/>
`;

exports[`Nav renders default styling 1`] = `
<nav
  className="c-chrome__nav "
  data-garden-id="chrome.nav"
  data-garden-version="version"
/>
`;

exports[`Nav renders expanded styling if provided 1`] = `
<nav
  className="c-chrome__nav c-chrome__nav--expanded "
  data-garden-id="chrome.nav"
  data-garden-version="version"
/>
`;

exports[`Nav renders light styling if provided 1`] = `
<nav
  className="c-chrome__nav c-chrome__nav--light "
  data-garden-id="chrome.nav"
  data-garden-version="version"
/>
`;
